# EventRoom

./: .env  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  runtime.txt
app/: main.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py
app/resources/events/: crud.py  models.py  routes.py  schemas.py  utils.py
app/resources/interests/: crud.py  models.py  routes.py  schemas.py
app/resources/profile_photos/: crud.py  models.py  routes.py  schemas.py  utils.py
app/resources/profiles/: crud.py  models.py  routes.py  schemas.py
app/resources/quiz_responses/: crud.py  models.py  routes.py  schemas.py
app/resources/quizes/: crud.py  models.py  routes.py  schemas.py
app/resources/settings/: crud.py  models.py  routes.py  schemas.py
app/resources/users/: crud.py  models.py  routes.py  schemas.py
tests/: test_users.py
