[tool.poetry]
name = "eventroom"
version = "0.1.0"
description = ""
authors = ["LeweLotki <stefanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
